syntax="proto3";
package intr.v1;
option go_package="/intr;intrv1";

service InteractiveService{
  rpc  IncrReadCnt(IncrReadCntRequest) returns ( IncrReadCntResponse);
  // Like 点赞
     rpc Like(LikeRequest ) returns(LikeResponse);
  // CancelLike 取消点赞
     rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  // Collect 收藏
     rpc Collect(CollectRequest) returns (CollectResponse);
     rpc Get(GetRequest) returns (GetResponse);
     rpc GetByIds(GetByIdRequest) returns(GetByIdResponse);
}

message GetByIdRequest{
  string biz=1;
  repeated int64 biz_ids=2;
}

message GetByIdResponse{
map<int64,Interactive> intrs=1;
}
message GetRequest{
  string biz=1;
  int64 biz_id=2;
  int64 uid=3;
}

message GetResponse{
Interactive intr=1;
}
message Interactive{
  string biz=1;
  int64  biz_id=2;
  int64  read_cnt=3;
  int64  like_cnt=4;
  int64 collect_cnt=5;
  // 这个是当下这个资源，你有没有点赞或者收集
  // 你也可以考虑把这两个字段分离出去，作为一个单独的结构体
  bool liked=6;
  bool collected=7;
}

message CollectRequest{
  string biz=1;
  int64 biz_id=2;
  int64 cid=3;
  int64 uid=4;

}

message CollectResponse{

}
message  CancelLikeRequest{
  string biz=1;
  int64 biz_id=2;
  int64 uid=3;
}

message CancelLikeResponse{

}
message LikeRequest{
  string biz=1;
  int64 biz_id=2;
  int64 uid=3;
}

message LikeResponse{

}
  message IncrReadCntRequest{
string biz=1;
int64 biz_id=2;
}

message IncrReadCntResponse{

}



